14-ingress/04-path-based-routing/src/albc-ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-alb
  namespace: otel-demo
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: multi-service  # Same ALB
    # Rule priority controlled via group.order.Lower number evaluated first. Catch-all / must always have highest order number
    alb.ingress.kubernetes.io/group.order: "20"
    alb.ingress.kubernetes.io/healthcheck-path: /grafana/  # Different health check
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
